# best_practices_tutorial

./: .gitlab-ci.yml  .travis.yml  README.md
academy_bringup/: CMakeLists.txt  package.xml
academy_bringup/config/: config.rviz
academy_bringup/launch/: demo.launch  robot.launch  visualization.launch
academy_commander/: CMakeLists.txt  package.xml
academy_commander/resource/: commander.ui
academy_commander/scripts/: commander
academy_lib/: CMakeLists.txt  package.xml
academy_lib/include/academy_lib/: colors.h
academy_lib/src/: colors.cpp
academy_lib/test/: test_colors.cpp
academy_msgs/: CMakeLists.txt  package.xml
academy_msgs/srv/: SelectJoint.srv
academy_py/: CMakeLists.txt  package.xml  setup.py
academy_py/src/academy_py/: service.py
academy_py/test/: test_is_success.py  test_selectjointservice.py  test_selectjointservice.test
academy_tools/: CMakeLists.txt  package.xml
academy_tools/src/: joint_marker.cpp
academy_tools/test/: test_joint_marker.test  test_select_joint.cpp  test_select_joint.test
