<?xml version="1.0"?>
<package format="2">
  <name>academy_lib</name>
  <version>0.0.0</version>
  <description>Simple library package for ROS-I Academy</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>
  <author email="nadia.hammoudeh-garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>libopencv_dev</build_depend>
  <build_depend>angles</build_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>libopencv_dev</exec_depend>
</package>
