<?xml version="1.0"?>
<package format="2">
  <name>academy_py</name>
  <version>0.0.0</version>
  <description>Simple python module package for ROS-I Academy</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>
  <author email="nadia.hammoudeh-garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>academy_msgs</exec_depend>

  <test_depend>abb_irb2400_support</test_depend>
  <test_depend>academy_msgs</test_depend>
  <test_depend>academy_tools</test_depend>
  <test_depend>joint_state_publisher</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>visualization_msgs</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rostest</test_depend>

</package>
