<?xml version="1.0"?>
<package format="2">
  <name>academy_tools</name>
  <version>0.0.0</version>
  <description>Simple C++ executable package for ROS-I Academy</description>

  <maintainer email="nadia.hammoudeh-garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>
  <author email="nadia.hammoudeh-garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <build_depend>academy_lib</build_depend>
  <build_depend>academy_msgs</build_depend>
  <exec_depend>academy_lib</exec_depend>
  <exec_depend>academy_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>abb_irb2400_support</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>joint_state_publisher</test_depend>
  <test_depend>rosunit</test_depend>
</package>
